tests/errors/incompatible_dimension_logical_arrays_logical_binop_01.f90
program main
   logical, parameter :: x1(3) = [.true., .false., .false.]
   print *, x1 .neqv. [.true., .true.]
end program
